--- a/style.css
+++ b/style.css
@@ -6,13 +6,22 @@
     color: white;
     padding: 4px 8px;
     margin-right: 10px;
+    font-size: 12px;
 }
 a {
     color: #2666be;
 }
+h1 {
+    font-weight: 400;
+    line-height: 1;
+}
+h2 {
+    font-weight: 600;
+    line-height: 2;
+}
 article {
     margin: auto;
-    max-width: 800px;
+    max-width: 750px;
 }
 .u-black {
     color: black;
@@ -20,5 +29,6 @@ article {
 p {
     font-family: "Roboto", sans-serif;
     line-height: 2;
+    size: 12px;
 }
 img {width: 100%;}
