--- a/style.css
+++ b/style.css
@@ -14,15 +14,17 @@ a {
 h1 {
     font-weight: 400;
     line-height: 1;
-    max-width: 550px;
+    max-width: 518px;
+    font-size: 24px;
 }
 h2 {
     font-weight: 600;
     line-height: 2;
+    font-size: 18px;
 }
 article {
     margin: auto;
-    max-width: 750px;
+    max-width: 584px;
 }
 .u-black {
     color: black;
@@ -30,6 +32,6 @@ article {
 p {
     font-family: "Roboto", sans-serif;
     line-height: 2;
-    size: 12px;
+    font-size: 12px;
 }
 img {width: 100%;}
